--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "serve": "./node_modules/.bin/webpack-dev-server -d --colors --inline --hot"
+    "serve": "./node_modules/.bin/webpack-dev-server -d --colors --inline --hot",
+    "fake-api": "node_modules/.bin/json-server --watch server/animals.json"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -13,5 +14,8 @@
     "file-loader": "^0.11.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "json-server": "^0.10.0"
   }
 }
